# tradingdash

./: .env  .gitignore  LICENSE  Procfile  README.md  Test.py  app.py  app2.py  log.txt  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: make_envfile.yml  tests.yml
Backtest/: Backtest.py  __init__.py  backtest.py
Config/: __init__.py  config.py
DataStore/: BuyAndHold.pickle  TacticalAllocation.pickle  data.py
Logger/: __init__.py  logger.py
Trading/: Strategies.py  __init__.py
src/tradingDashboard/: Backtest.py  BuyAndHold.pickle  CrossAllocation.pickle  Strategies.py  Strategies3.py  StrategiesBase.py  TacticalAllocation.pickle  __init__.py  config.py  config_platform.json  data.py  etfs.db  logger.py  main.py
src/tradingDashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tradingdash.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_query.py
