[build-system]
requires = ["setuptools >= 35.0.2","setuptools_scm >= 2.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addoptq = "--cov=src"


packages = [ {include = "src"}]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = false
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = false
warn_redundant_casts = false
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false

