[metadata]
name = tradingDashboard
description = Data visualisation tool to assess trading strategies performance
version = 1.0.0
author = Emmanuel Djanga
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9


packages =
    tradingDashboard

install_requires =
	rappnope==0.1.3
    backcall==0.2.0
    Brotli==1.0.9
    certifi==2022.6.15
    charset-normalizer==2.1.0
    click==8.1.3
    cycler==0.11.0
    dash==2.6.1
    dash-core-components==2.0.0
    dash-html-components==2.0.0
    dash-table==5.0.0
    decorator==5.1.1
    Flask==2.2.2
    Flask-Compress==1.12
    fonttools==4.34.4
    idna==3.3
    importlib-metadata==4.12.0
    ipython==7.34.0
    itsdangerous==2.1.2
    jedi==0.18.1
    Jinja2==3.1.2
    joblib==1.1.0
    kiwisolver==1.4.4
    lxml==4.9.1
    MarkupSafe==2.1.1
    matplotlib==3.5.2
    matplotlib-inline==0.1.3
    multitasking==0.0.11
    numpy==1.21.6
    packaging==21.3
    pandas==1.3.5
    pandas-datareader==0.10.0
    parso==0.8.3
    pexpect==4.8.0
    pickleshare==0.7.5
    Pillow==9.2.0
    plotly==5.9.0
    prompt-toolkit==3.0.30
    ptyprocess==0.7.0
    Pygments==2.12.0
    pyparsing==3.0.9
    python-dateutil==2.8.2
    pytz==2022.1
    requests==2.28.1
    scikit-learn==1.0.2
    scipy==1.7.3
    seaborn==0.11.2
    six==1.16.0
    tabulate==0.8.10
    tenacity==8.0.1
    threadpoolctl==3.1.0
    traitlets==5.3.0
    typing-extensions==4.3.0
    urllib3==1.26.11
    wcwidth==0.2.5
    Werkzeug==2.2.2
    yfinance==0.1.74
    zipp==3.8.1

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
tradingDashboard = py.typed

zip_safe = no

[flake8]
max-line-length = 160
